--- a/2048game.html
+++ b/2048game.html
@@ -11,6 +11,9 @@
 	</head>
 	<body>
 		<div id="app">
+			<audio autoplay loop>
+			  <source src="imgs/imgs2048/bgm.mp3" type="audio/mpeg">
+			</audio>
 			<div class="bg"></div>
 			<div class="title-box">
 				<span class="title">2048</span>
