--- a/dev.html
+++ b/dev.html
@@ -32,7 +32,7 @@
 					<li>FUNCSS</li>
 				</ul>
 				<ul>
-					<a href="play/2048/2048game.html"><li>2048 Game</li></a>
+					<li>2048 Game</li>
 				</ul>
 			</div>
 		</main>
