--- a/design.html
+++ b/design.html
@@ -18,9 +18,10 @@
 			<aside class="logo"></aside>
 			<nav>
 				<a href="index.html">首页</a>
-				<a href="design.hmtl">设计</a>
-				<a href="dev.hmtl">前端</a>
-				<a href="test.hmtl">实验</a>
+				<a href="design.html">设计</a>
+				<a href="dev.html">前端</a>
+				<a href="test.html">实验</a>
+				<a href="about.html">关于</a>
 			</nav>
 		</header>
 		<main class="test-box">
