--- a/dev.html
+++ b/dev.html
@@ -18,9 +18,10 @@
 			<aside class="logo"></aside>
 			<nav>
 				<a href="index.html">首页</a>
-				<a href="design.hmtl">设计</a>
-				<a href="dev.hmtl">前端</a>
-				<a href="test.hmtl">实验</a>
+				<a href="design.html">设计</a>
+				<a href="dev.html">前端</a>
+				<a href="test.html">实验</a>
+				<a href="about.html">实验</a>
 			</nav>
 		</header>
 		<main class="test-box">
@@ -45,5 +46,15 @@
 	<script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
 	<script src="app.js"></script>
 	<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+	<script>
+		// 百度统计
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?aed07108ff8651ce13670ba77c3c048c";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </body>
 </html>
