--- a/about.html
+++ b/about.html
@@ -37,9 +37,9 @@
 				</ul>
 			</div>
 		</main>
-		<footer>
-			底部
-			回到顶部
+		<footer class="footer-info">
+			<span>liujueyi.cn © 2019</span>
+			<a class="text-link" target="_blank" href="https://beian.miit.gov.cn/">冀ICP备19017590号-1</a>
 		</footer>
   </div>
 	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>	
