--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -7,32 +7,60 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<title>vip视频解析</title>
+		<link href="https://fonts.loli.net/css2?family=Noto+Sans+SC:wght@400;700;900&display=swap"" rel="stylesheet">
+		<link href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap"" rel="stylesheet">
+		<link rel="stylesheet" href="../../css/common.css">
+		<link rel="stylesheet" href="../../css/style.css">
 		<link rel="stylesheet" href="files/vipvideo.css">
 	</head>
   <body>
 
     <div class="container">
-
-      <div class="three-box">
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<ul class="analysis-title">
-						<li class="lab-title">视频解析</li>
-						<li class="lab-item-info">接口源于互联网，仅供学习娱乐交流，勿用于商业，后果自负！</li>
-					</ul>
+			<!-- 通用导航 -->
+			<header class="flex">
+				<aside class="logo flex">
+					<span class="logo-img"><img src="../../imgs/sjs-logo.webp" alt="设计师工作日常"></span>
+					<span class="logo-name">设计师工作日常</span>
+				</aside>
+				<nav>
+					<a class="nav-a" href="../../index.html">首页</a>
+					<a class="nav-a" href="../../design.html">设计</a>
+					<a class="nav-a" href="../../dev.html">前端</a>
+					<a class="nav-a" href="../../test.html">实验</a>
+					<a class="nav-a" href="../../about.html">关于</a>
+				</nav>
+			</header>
+			
+      <section class="blue-box">
+				<div class="analysis-title flex">
+					<div class="lab-title">视频解析</div>
+					<div class="lab-item-info">接口源于互联网，仅供学习娱乐交流，勿用于商业，后果自负！</div>
 				</div>
-				<div class="inp-box">
-					<input type="text" class="v-inp">
-					<a href="javascript:;" class="v-play-btn">立即播放</a>
+				<div class="vip-box">
+					<div class="inp-box">
+						<select name="vip-line" id="vip-line">
+							<option value="https://jx.m3u8.tv/jiexi/?url=">通用高速稳定</option>
+							<option value="https://jx.xmflv.com/?url=">通用稳定</option>
+							<option value="https://jx.jsonplayer.com/player/?url=">vip通用</option>
+							<option value="https://jx.777jiexi.com/player/?url=">电视节目线路推荐</option>
+							<option value="http://www.wpsseo.cn/line.php?n=7&url=">电影线路推荐</option>
+							<option value="https://jx.xmflv.com/?url=">线路1</option>
+							<option value="https://jx.xyflv.cc/?url==">线路2</option>
+							<option value="https://im1907.top/?jx=">线路3</option>
+						</select>
+						<input type="text" class="v-inp">
+						<a href="javascript:;" class="v-play-btn">立即播放</a>
+					</div>
+					<div class="v-main">
+					  <div class="v-info">
+					    <p>使用说明：</p>
+					    <p>1、输入视频地址(如http://v.youku.com/v_show/id_XMjkwMDE4NDQyNA==.html)，点击立即播放</p>
+					    <p>2、支持多家视频网站vip解析，无广告免费观看</p>
+					    <p>3、已支持优酷、爱奇艺、芒果、乐视、腾讯、搜狐、pptv、土豆、b站等主流视频网站</p>
+					  </div>
+					  <iframe class="v-iframe" src="" frameborder="0" width="1000" height="900"></iframe>
+					</div>
 				</div>
-        <div class="v-main">
-          <div class="v-info">
-            <p>使用说明：</p>
-            <p>1、输入视频地址(如http://v.youku.com/v_show/id_XMjkwMDE4NDQyNA==.html)，点击立即播放</p>
-            <p>2、支持多家视频网站vip解析，无广告免费观看</p>
-            <p>3、已支持优酷、爱奇艺、芒果、乐视、腾讯、搜狐、pptv、土豆、b站等主流视频网站</p>
-          </div>
-          <iframe class="v-iframe" src="" frameborder="0" width="1000" height="900"></iframe>
-        </div>
       </div>
 			
     </div>
