--- a/test.html
+++ b/test.html
@@ -8,20 +8,24 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<title>设计师工作日常 - Just. Liu的个人网站</title>
 	<link href="https://fonts.loli.net/css2?family=Noto+Sans+SC:wght@400;700;900&display=swap"" rel="stylesheet">
+	<link href="https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@400;700;900&display=swap"" rel="stylesheet">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="app">
-		<!-- nav -->
-		<header>
-			<aside class="logo"></aside>
+		<!-- 通用导航 -->
+		<header class="flex">
+			<aside class="logo flex">
+				<span class="logo-img"><img src="imgs/sjs-logo.webp" alt="设计师工作日常"></span>
+				<span class="logo-name">设计师工作日常</span>
+			</aside>
 			<nav>
-				<a href="index.html">首页</a>
-				<a href="design.html">设计</a>
-				<a href="dev.html">前端</a>
-				<a href="test.html">实验</a>
-				<a href="about.html">实验</a>
+				<a class="nav-a" href="index.html">首页</a>
+				<a class="nav-a" href="design.html">设计</a>
+				<a class="nav-a" href="dev.html">前端</a>
+				<a class="nav-a" href="test.html">实验</a>
+				<a class="nav-a" href="about.html">关于</a>
 			</nav>
 		</header>
 		<main class="test-box">
