--- a/index.html
+++ b/index.html
@@ -31,9 +31,17 @@
 		<main>
 			待开发
 		</main>
-		<footer class="footer-info">
-			<span>liujueyi.cn © 2019</span>
-			<a class="text-link" target="_blank" href="https://beian.miit.gov.cn/">冀ICP备19017590号-1</a>
+		<footer class="footer flex">
+			<div class="about-info">
+			  <a href="javascript:;" @click="popGzh">公众号</a>
+			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
+			  <a href="https://t.me/designer_work_share" target="_blank">电报</a>
+			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+			</div>
+			<div class="site-beian">
+			  <span>设计师工作日常 © 2019</span>
+			  <a href="https://beian.miit.gov.cn" target="_blank">冀ICP备19017590号-1</a>
+			</div>
 		</footer>
   </div>
 	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>	
