--- a/test.html
+++ b/test.html
@@ -28,22 +28,63 @@
 				<a class="nav-a" href="about.html">关于</a>
 			</nav>
 		</header>
-		<main class="test-box">
-			<div>
-				<ul>
-					<li>WHTOOL</li>
-				</ul>
-				<ul>
-					<li>FUNCSS</li>
-				</ul>
-				<ul>
-					<a href="play/2048/2048game.html"><li>2048 Game</li></a>
+		<section class="blue-box" style="padding-bottom: 6.25rem">
+			<div class="test-banner flex">
+				<div class="cube-box52">
+					<div class="cube52">
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+					<div class="cube52">
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="test-title flex">
+					<ul class="flex">
+						<li class="test-title-name">实验</li>
+						<li class="test-title-info">苟日新，日日新，又日新。</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="red-box" style="padding-bottom: 6.25rem">
+			<div class="web-pro-title flex">
+				<ul class="flex">
+					<li class="test-title-name">Web。</li>
+					<li class="test-title-info">纸上得来终觉浅，绝知此事要躬行。</li>
 				</ul>
 			</div>
-		</main>
-		<footer class="footer-info">
-			<span>liujueyi.cn © 2019</span>
-			<a class="text-link" target="_blank" href="https://beian.miit.gov.cn/">冀ICP备19017590号-1</a>
+			<div class="web-pro-list flex">
+				<ul class="web-pro-item flex">
+					<li></li>
+					<li>WHTOOL - 宽高比例计算工具</li>
+					<li>一款计算图片宽度和高度的辅助设计师的在线工具</li>
+				</ul>
+				<ul class="web-pro-item">
+					<li></li>
+					<li>WHTOOL - 宽高比例计算工具</li>
+					<li>一款计算图片宽度和高度的辅助设计师的在线工具</li>
+				</ul>
+			</div>
+		</section>
+		<footer class="footer flex">
+			<div class="about-info">
+			  <a href="javascript:;" @click="popGzh">公众号</a>
+			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
+			  <a href="https://t.me/designer_work_share" target="_blank">电报</a>
+			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+			</div>
+			<div class="site-beian">
+			  <span>设计师工作日常 © 2019</span>
+			  <a href="https://beian.miit.gov.cn" target="_blank">冀ICP备19017590号-1</a>
+			</div>
 		</footer>
   </div>
 	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>	
