--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -31,37 +31,51 @@
 				</nav>
 			</header>
 			
-      <section class="blue-box">
+      <section class="blue-box" style="padding-bottom: 6.25rem">
 				<div class="analysis-title flex">
 					<div class="lab-title">视频解析</div>
 					<div class="lab-item-info">接口源于互联网，仅供学习娱乐交流，勿用于商业，后果自负！</div>
 				</div>
 				<div class="vip-box">
-					<div class="inp-box">
+					<div class="inp-box flex">
 						<select name="vip-line" id="vip-line">
 							<option value="https://jx.m3u8.tv/jiexi/?url=">通用高速稳定</option>
 							<option value="https://jx.xmflv.com/?url=">通用稳定</option>
 							<option value="https://jx.jsonplayer.com/player/?url=">vip通用</option>
 							<option value="https://jx.777jiexi.com/player/?url=">电视节目线路推荐</option>
 							<option value="http://www.wpsseo.cn/line.php?n=7&url=">电影线路推荐</option>
-							<option value="https://jx.xmflv.com/?url=">线路1</option>
-							<option value="https://jx.xyflv.cc/?url==">线路2</option>
-							<option value="https://im1907.top/?jx=">线路3</option>
+							<option value="https://jx.xyflv.cc/?url==">线路1</option>
+							<option value="https://im1907.top/?jx=">线路2</option>
 						</select>
-						<input type="text" class="v-inp">
-						<a href="javascript:;" class="v-play-btn">立即播放</a>
+						<input type="text" class="v-inp" placeholder="粘贴视频地址">
+						<button class="v-play-btn" data-text="立即播放"></button>
 					</div>
-					<div class="v-main">
+					<div class="v-main flex">
 					  <div class="v-info">
 					    <p>使用说明：</p>
-					    <p>1、输入视频地址(如http://v.youku.com/v_show/id_XMjkwMDE4NDQyNA==.html)，点击立即播放</p>
+					    <p>1、输入视频地址(如https://v.qq.com/x/cover/mzc002009pva8r2/u4100c1g8qd.html)，点击立即播放</p>
 					    <p>2、支持多家视频网站vip解析，无广告免费观看</p>
 					    <p>3、已支持优酷、爱奇艺、芒果、乐视、腾讯、搜狐、pptv、土豆、b站等主流视频网站</p>
+							<p>4、不要相信视频内的任何广告，其后果自负</p>
+							<p>5、如视频打不开，或受网络影响，可以多点击播放按钮，刷新几次</p>
 					  </div>
-					  <iframe class="v-iframe" src="" frameborder="0" width="1000" height="900"></iframe>
+					  <iframe class="v-iframe" src="" frameborder="0" width="100%" height="100%"></iframe>
 					</div>
 				</div>
       </div>
+			
+			<footer class="footer flex">
+				<div class="about-info">
+				  <a href="javascript:;" @click="popGzh">公众号</a>
+				  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
+				  <a href="https://t.me/designer_work_share" target="_blank">电报</a>
+				  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+				</div>
+				<div class="site-beian">
+				  <span>设计师工作日常 © 2019</span>
+				  <a href="https://beian.miit.gov.cn" target="_blank">冀ICP备19017590号-1</a>
+				</div>
+			</footer>
 			
     </div>
     <script src="files/vipvideo.js"></script>
