--- a/design.html
+++ b/design.html
@@ -29,14 +29,20 @@
 			</nav>
 		</header>
 		<main>
-			待开发
+			
 		</main>
 		<footer class="footer flex">
 			<div class="about-info">
-			  <a href="javascript:;" @click="popGzh">公众号</a>
+			  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
 			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
-			  <a href="https://t.me/designer_work_share" target="_blank">电报</a>
+			  <a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
 			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+				<a href="javascript:;" class="footer-gzh">公众号
+				<aside class="gzh-pop">
+					<img class="gzhimg" src="https://funcss.liujueyi.cn/img/wxgzh.png" alt="微信公众号">
+					<p class="gzhtext">微信公众号</p>
+				</aside>
+				</a>
 			</div>
 			<div class="site-beian">
 			  <span>设计师工作日常 © 2019</span>
