--- a/play/vipvideo/vipvideo.html
+++ b/play/vipvideo/vipvideo.html
@@ -14,7 +14,6 @@
 		<link rel="stylesheet" href="files/vipvideo.css">
 	</head>
   <body>
-
     <div class="container">
 			<!-- 通用导航 -->
 			<header class="flex">
@@ -62,14 +61,20 @@
 					  <iframe class="v-iframe" src="" frameborder="0" width="100%" height="100%"></iframe>
 					</div>
 				</div>
-      </div>
+      </section>
 			
 			<footer class="footer flex">
 				<div class="about-info">
-				  <a href="javascript:;" @click="popGzh">公众号</a>
+				  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
 				  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
-				  <a href="https://t.me/designer_work_share" target="_blank">电报</a>
+				  <a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
 				  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+					<a href="javascript:;" class="footer-gzh">公众号
+					<aside class="gzh-pop">
+						<img class="gzhimg" src="https://funcss.liujueyi.cn/img/wxgzh.png" alt="微信公众号">
+						<p class="gzhtext">微信公众号</p>
+					</aside>
+					</a>
 				</div>
 				<div class="site-beian">
 				  <span>设计师工作日常 © 2019</span>
@@ -78,6 +83,18 @@
 			</footer>
 			
     </div>
+		
     <script src="files/vipvideo.js"></script>
+		<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+		<script>
+			// 百度统计
+			var _hmt = _hmt || [];
+			(function() {
+				var hm = document.createElement("script");
+				hm.src = "https://hm.baidu.com/hm.js?aed07108ff8651ce13670ba77c3c048c";
+				var s = document.getElementsByTagName("script")[0]; 
+				s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
   </body>
 </html>
