--- a/test.html
+++ b/test.html
@@ -57,29 +57,50 @@
 		<section class="red-box" style="padding-bottom: 6.25rem">
 			<div class="web-pro-title flex">
 				<ul class="flex">
-					<li class="test-title-name">Web。</li>
+					<li class="test-title-name">Web H5。</li>
 					<li class="test-title-info">纸上得来终觉浅，绝知此事要躬行。</li>
 				</ul>
 			</div>
 			<div class="web-pro-list flex">
-				<ul class="web-pro-item flex">
-					<li></li>
-					<li>WHTOOL - 宽高比例计算工具</li>
-					<li>一款计算图片宽度和高度的辅助设计师的在线工具</li>
-				</ul>
-				<ul class="web-pro-item">
-					<li></li>
-					<li>WHTOOL - 宽高比例计算工具</li>
-					<li>一款计算图片宽度和高度的辅助设计师的在线工具</li>
-				</ul>
+				<a class="web-pro-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="web-pro-logo"><img src="imgs/whtool.webp" alt="whtool" /></li>
+					<li class="web-pro-name">WHTOOL - 宽高比例计算工具</li>
+					<li class="web-pro-info">一款计算图片宽度和高度的辅助设计师的在线工具</li>
+				</a>
+				<a class="web-pro-item flex" href="https://funcss.liujueyi.cn/" target="_blank">
+					<li class="web-pro-logo"><img src="imgs/funcss.webp" alt="funcss" /></li>
+					<li class="web-pro-name">FUNCSS - 有趣的css</li>
+					<li class="web-pro-info">一个关于 CSS 的案例展示和分享平台</li>
+				</a>
+				<a class="web-pro-item flex" href="play/2048/2048game.html" target="_blank">
+					<li class="web-pro-logo"><img src="imgs/2048.webp" alt="2048" /></li>
+					<li class="web-pro-name">2048 - 摸鱼小游戏</li>
+					<li class="web-pro-info">曾今很火的2048小游戏网页版</li>
+				</a>
+				<a class="web-pro-item flex" href="hhttps://appshare.liujueyi.cn/" target="_blank">
+					<li class="web-pro-logo"><img src="imgs/designshare.webp" alt="设计师工作软件" /></li>
+					<li class="web-pro-name">设计师工作软件</li>
+					<li class="web-pro-info">设计师常用工作软件分享平台</li>
+				</a>
+				<a class="web-pro-item flex" href="play/vipvideo/vipvideo.html" target="_blank">
+					<li class="web-pro-logo"><img src="imgs/vip-v.webp" alt="视频解析工具" /></li>
+					<li class="web-pro-name">视频解析工具 - 在线看vip视频</li>
+					<li class="web-pro-info">免费在线观看vip视频</li>
+				</a>
 			</div>
 		</section>
 		<footer class="footer flex">
 			<div class="about-info">
-			  <a href="javascript:;" @click="popGzh">公众号</a>
+			  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
 			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
-			  <a href="https://t.me/designer_work_share" target="_blank">电报</a>
+			  <a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
 			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+				<a href="javascript:;" class="footer-gzh">公众号
+				<aside class="gzh-pop">
+					<img class="gzhimg" src="https://funcss.liujueyi.cn/img/wxgzh.png" alt="微信公众号">
+					<p class="gzhtext">微信公众号</p>
+				</aside>
+				</a>
 			</div>
 			<div class="site-beian">
 			  <span>设计师工作日常 © 2019</span>
@@ -87,7 +108,7 @@
 			</div>
 		</footer>
   </div>
-	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>	
+	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>
 	<script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
 	<script src="app.js"></script>
 	<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
