--- a/test.html
+++ b/test.html
@@ -77,7 +77,7 @@
 					<li class="web-pro-name">2048 - 摸鱼小游戏</li>
 					<li class="web-pro-info">曾今很火的2048小游戏网页版</li>
 				</a>
-				<a class="web-pro-item flex" href="hhttps://appshare.liujueyi.cn/" target="_blank">
+				<a class="web-pro-item flex" href="https://appshare.liujueyi.cn/" target="_blank">
 					<li class="web-pro-logo"><img src="imgs/designshare.webp" alt="设计师工作软件" /></li>
 					<li class="web-pro-name">设计师工作软件</li>
 					<li class="web-pro-info">设计师常用工作软件分享平台</li>
