--- a/dev.html
+++ b/dev.html
@@ -58,7 +58,7 @@
 				</ul>
 			</div>
 			<div class="web-pro-list flex">
-				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="68">
 					<li class="dev-item-name">水波纹按钮</li>
 					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
@@ -66,7 +66,7 @@
 						<span><i class="i-dot"></i> 2023-3-17</span>
 					</li>
 				</a>
-				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="67">
 					<li class="dev-item-name">水波纹按钮</li>
 					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
@@ -74,7 +74,7 @@
 						<span><i class="i-dot"></i> 2023-3-17</span>
 					</li>
 				</a>
-				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="1">
 					<li class="dev-item-name">水波纹按钮</li>
 					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
@@ -82,7 +82,7 @@
 						<span><i class="i-dot"></i> 2023-3-17</span>
 					</li>
 				</a>
-				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="8">
 					<li class="dev-item-name">水波纹按钮</li>
 					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
@@ -90,7 +90,7 @@
 						<span><i class="i-dot"></i> 2023-3-17</span>
 					</li>
 				</a>
-				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="24">
 					<li class="dev-item-name">水波纹按钮</li>
 					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
@@ -98,7 +98,7 @@
 						<span><i class="i-dot"></i> 2023-3-17</span>
 					</li>
 				</a>
-				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="68">
 					<li class="dev-item-name">水波纹按钮</li>
 					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
