--- a/design.html
+++ b/design.html
@@ -28,9 +28,71 @@
 				<a class="nav-a" href="about.html">关于</a>
 			</nav>
 		</header>
-		<main>
-			待开发
-		</main>
+		<section class="blue-box" style="padding-bottom: 6.25rem">
+			<div class="test-banner flex">
+				<div class="banner-left-box flex">
+					<div class="design-animation-01"></div>
+					<div class="design-animation-02" style="margin: 0 2rem;"></div>
+					<div class="design-animation-03"></div>
+				</div>
+				<div class="test-title flex">
+					<ul class="flex">
+						<li class="test-title-name">设计</li>
+						<li class="test-title-info">书痴者文必工，艺痴者技必良。</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="red-box" style="padding-bottom: 6.25rem">
+			<div class="web-pro-title flex">
+				<ul class="flex">
+					<li class="test-title-name">更好的用户体验。</li>
+					<li class="test-title-info">春有百花秋望月，夏有凉风冬听雪。</li>
+				</ul>
+			</div>
+			<div class="item-list flex">
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+				<a class="design-item flex" href="https://whtool.liujueyi.cn/" target="_blank">
+					<li class="design-img-li"><img src="imgs/19.webp" alt="呼叫中心CRM解决方案" /></li>
+					<li class="dev-item-name">呼叫中心CRM解决方案</li>
+					<li class="item-bottom-info flex">
+						<span># UI - App</span>
+						<span><i class="i-dot"></i> 2023-3-17</span>
+					</li>
+				</a>
+			</div>
+		</section>
 		<footer class="footer flex">
 			<div class="about-info">
 			  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
@@ -50,7 +112,7 @@
 			</div>
 		</footer>
   </div>
-	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>	
+	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>
 	<script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
 	<script src="app.js"></script>
 	<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
