--- a/dev.html
+++ b/dev.html
@@ -57,7 +57,7 @@
 					<li class="test-title-info">陋室空空徒四壁，代码行行正铿锵。</li>
 				</ul>
 			</div>
-			<div class="web-pro-list flex">
+			<div class="item-list flex">
 				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="68">
 					<li class="dev-item-name">水波纹按钮</li>
 					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
