--- a/index.html
+++ b/index.html
@@ -14,41 +14,72 @@
 </head>
 <body>
   <div id="app">
-		<!-- 通用导航 -->
-		<header class="flex">
-			<aside class="logo flex">
-				<span class="logo-img"><img src="imgs/sjs-logo.webp" alt="设计师工作日常"></span>
-				<span class="logo-name">设计师工作日常</span>
-			</aside>
-			<nav>
-				<a class="nav-a" href="index.html">首页</a>
-				<a class="nav-a" href="design.html">设计</a>
-				<a class="nav-a" href="dev.html">前端</a>
-				<a class="nav-a" href="test.html">实验</a>
-				<a class="nav-a" href="about.html">关于</a>
-			</nav>
-		</header>
-		<main>
-			待开发
-		</main>
-		<footer class="footer flex">
-			<div class="about-info">
-			  <a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
-			  <a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
-			  <a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
-			  <a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
-				<a href="javascript:;" class="footer-gzh">公众号
-				<aside class="gzh-pop">
-					<img class="gzhimg" src="https://funcss.liujueyi.cn/img/wxgzh.png" alt="微信公众号">
-					<p class="gzhtext">微信公众号</p>
+		<section class="blue-box">
+			<!-- 通用导航 -->
+			<header class="flex">
+				<aside class="logo flex">
+					<span class="logo-img"><img src="imgs/sjs-logo.webp" alt="设计师工作日常"></span>
+					<span class="logo-name">设计师工作日常</span>
 				</aside>
-				</a>
-			</div>
-			<div class="site-beian">
-			  <span>设计师工作日常 © 2019</span>
-			  <a href="https://beian.miit.gov.cn" target="_blank">冀ICP备19017590号-1</a>
-			</div>
-		</footer>
+				<nav>
+					<a class="nav-a" href="index.html">首页</a>
+					<a class="nav-a" href="design.html">设计</a>
+					<a class="nav-a" href="dev.html">前端</a>
+					<a class="nav-a" href="test.html">实验</a>
+					<a class="nav-a" href="about.html">关于</a>
+				</nav>
+			</header>
+			<main class="index-box">
+				<div class="index-content">
+					<div class="index-page flex">
+						<div class="person-img"></div>
+						<div class="index-text-box">
+							<p class="index-title">Welcome!</p>
+							<p class="index-info">我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
+						</div>
+					</div>
+					<div class="index-page">
+						<div></div>
+						<div>
+							<p>Welcome!</p>
+							<p>您好！我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
+						</div>
+					</div>
+					<div class="index-page">
+						<div></div>
+						<div>
+							<p>Welcome!</p>
+							<p>您好！我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
+						</div>
+					</div>
+					<div class="index-page">
+						<div></div>
+						<div>
+							<p>Welcome!</p>
+							<p>您好！我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
+						</div>
+					</div>
+				</div>
+			</main>
+			<footer class="footer flex">
+				<div class="about-info">
+					<a href="https://huaban.com/user/liujueyi" target="_blank">花瓣</a>
+					<a href="https://blog.csdn.net/justliu1989" target="_blank">CSDN</a>
+					<a href="https://t.me/designer_work_share" target="_blank">电报频道</a>
+					<a href="https://weibo.com/u/1849041452" target="_blank">微博</a>
+					<a href="javascript:;" class="footer-gzh">公众号
+					<aside class="gzh-pop">
+						<img class="gzhimg" src="https://funcss.liujueyi.cn/img/wxgzh.png" alt="微信公众号">
+						<p class="gzhtext">微信公众号</p>
+					</aside>
+					</a>
+				</div>
+				<div class="site-beian">
+					<span>设计师工作日常 © 2019</span>
+					<a href="https://beian.miit.gov.cn" target="_blank">冀ICP备19017590号-1</a>
+				</div>
+			</footer>
+		</section>
   </div>
 	<script src="https://cdn.bootcdn.net/ajax/libs/vue/3.3.4/vue.global.js"></script>	
 	<script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
@@ -63,6 +94,12 @@
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
+		// 横屏滚动
+		var containerWheel = document.querySelector(".index-content");
+		containerWheel.addEventListener("wheel", (event) => {
+		  event.preventDefault();
+		  containerWheel.scrollLeft += event.deltaY;
+		});
 	</script>
 
 </body>
