--- a/dev.html
+++ b/dev.html
@@ -60,7 +60,7 @@
 			<div class="item-list flex">
 				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="68">
 					<li class="dev-item-name">水波纹按钮</li>
-					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
+					<li class="web-pro-info lh1-5">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
 						<span># 有趣的css</span>
 						<span><i class="i-dot"></i> 2023-3-17</span>
@@ -68,7 +68,7 @@
 				</a>
 				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="67">
 					<li class="dev-item-name">水波纹按钮</li>
-					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
+					<li class="web-pro-info lh1-5">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
 						<span># 有趣的css</span>
 						<span><i class="i-dot"></i> 2023-3-17</span>
@@ -76,7 +76,7 @@
 				</a>
 				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="1">
 					<li class="dev-item-name">水波纹按钮</li>
-					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
+					<li class="web-pro-info lh1-5">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
 						<span># 有趣的css</span>
 						<span><i class="i-dot"></i> 2023-3-17</span>
@@ -84,7 +84,7 @@
 				</a>
 				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="8">
 					<li class="dev-item-name">水波纹按钮</li>
-					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
+					<li class="web-pro-info lh1-5">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
 						<span># 有趣的css</span>
 						<span><i class="i-dot"></i> 2023-3-17</span>
@@ -92,7 +92,7 @@
 				</a>
 				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="24">
 					<li class="dev-item-name">水波纹按钮</li>
-					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
+					<li class="web-pro-info lh1-5">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
 						<span># 有趣的css</span>
 						<span><i class="i-dot"></i> 2023-3-17</span>
@@ -100,7 +100,7 @@
 				</a>
 				<a class="dev-item flex" href="https://whtool.liujueyi.cn/" target="_blank" data-num="68">
 					<li class="dev-item-name">水波纹按钮</li>
-					<li class="web-pro-info lh2">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
+					<li class="web-pro-info lh1-5">好看有质感的水波纹按钮，适用大的入口场景，比如 banner 详情入口等，醒目、容易被看到。</li>
 					<li class="item-bottom-info flex">
 						<span># 有趣的css</span>
 						<span><i class="i-dot"></i> 2023-3-17</span>
