--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 				</nav>
 			</header>
 			<main class="index-box">
+				<div class="cursor27">
+					<span class="ani-box27">
+					</span>
+				</div>
 				<div class="index-content">
 					<div class="index-page flex">
 						<div class="person-img"></div>
@@ -38,25 +42,25 @@
 							<p class="index-info">我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
 						</div>
 					</div>
-					<div class="index-page">
-						<div></div>
-						<div>
-							<p>Welcome!</p>
-							<p>您好！我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
+					<div class="index-page flex">
+						<div class="person-img"></div>
+						<div class="index-text-box">
+							<p class="index-title">UX/UI。</p>
+							<p class="index-info">好的设计不仅关注功能性，还要为用户提供愉悦舒适的使用体验。</p>
 						</div>
 					</div>
-					<div class="index-page">
-						<div></div>
-						<div>
-							<p>Welcome!</p>
-							<p>您好！我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
+					<div class="index-page flex">
+						<div class="person-img"></div>
+						<div class="index-text-box">
+							<p class="index-title">平面/品牌VI。</p>
+							<p class="index-info">传播赋予产品生命的魅力外衣。</p>
 						</div>
 					</div>
-					<div class="index-page">
-						<div></div>
-						<div>
-							<p>Welcome!</p>
-							<p>您好！我是 Just. Liu，这里是设计师工作日常，欢迎您的光临！</p>
+					<div class="index-page flex">
+						<div class="person-img"></div>
+						<div class="index-text-box">
+							<p class="index-title">WEB前端。</p>
+							<p class="index-info">熟悉前端代码，可以更好的帮助设计产品，实现落地。</p>
 						</div>
 					</div>
 				</div>
