--- a/dev.html
+++ b/dev.html
@@ -65,6 +65,9 @@
 			</div>
 			<div class="item-list flex">
 				<a v-for="item in devItems" :key="item.id" class="dev-item flex" :href="item.link" target="_blank" :data-num="item.id">
+					<li class="info-img-box" v-if="item.type === 1 && item.class === 1">
+							<img class="info-img" :src="item.img" :alt="item.title">
+					</li>
 					<li class="dev-item-name lh1-5">{{item.title}}</li>
 					<li class="web-pro-info lh1-5">{{item.info}}</li>
 					<li class="item-bottom-info flex">
@@ -73,7 +76,7 @@
 						<span v-if="item.type === 1 && item.class === 2"># 实用案例组件</span>
 						<span>{{item.time}}</span>
 					</li>
-				</a>
+				</a
 			</div>
 		</section>
 		<footer class="footer flex">
